overflow fix

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html,body {
 	font-size: 14px;
 	color: var(--text);
 	background-color: var(--body);
-	overflow: hidden;
+	overflow: auto;
 }
 section {
 	float: left;
